--- a/main.tex
+++ b/main.tex
@@ -1127,12 +1127,21 @@ Diagram przypadku użycia:
 \includegraphics[scale=0.5]{nowy_typ_zasob_sequence.png}
 \end{figure}
 
+\chapter{Diagram komponentów}
+
+\begin{figure}[H]
+\centering
+\includegraphics[scale=0.5]{components_diagram.png}
+\end{figure}
+
 \chapter{Model bazy danych}
 
 \begin{figure}[H]
 \centering
-\includegraphics[scale=0.5]{database.jpg}
+\includegraphics[scale=0.5]{database.png}
 \end{figure}
+
+\pagebreak
 
 \chapter{Interfejs użytkownika}
 Poniżej zamieszczono przykładowe elementy interfejsu użytkownika: 
